replacement by omicdata() by microarraydata() and add of RNAseqdata() and metabolomicdata()

--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,5 +1,12 @@
 === DRomics : Dose response for omics ===
 
+Version 2.0-0 
+=============
+NEW FEATURES
+- Replacement of the function omicdata() by the function 
+microarraydata() and add of two new data importation functions,
+RNAseqdata() and metabolomicdata().
+
 Version 1.1-3 
 =============
 NEW FEATURES
