--- a/inst/NEWS
+++ b/inst/NEWS
@@ -14,6 +14,8 @@ corresponding help pages
 to enable the selection of significant responses on continuous anchoring data.
 - Add an argument x_pseudo_log_transfo in plot.drcfit to enable the use of
 pseudo log tranformation of the x-axis.
+- Add an element in the list of drcfit() output : unfitres giving some 
+information on selected items for which the modelling step is not successful
 - Add of a function to plot raw data on target items optionally with fitted curves 
 for items which have be selected in step 2 and for which step 3 was successful
 (new function targetplot()).
