minor changes after the check

--- a/inst/NEWS
+++ b/inst/NEWS
@@ -20,7 +20,8 @@ information on selected items for which the modelling step is not successful
 for items which have be selected in step 2 and for which step 3 was successful
 (new function targetplot()).
 - Add of the argument transfo.blind in RNAseqdata().
-- Add of the argument free.y.scales in curvesplot() to enbale free y scales in facets.
+- Add of the argument free.y.scales in curvesplot() to enable free y scales in facets
+and dose_log_transfo to use an x log scale for plot and calculation of signal.
 - Add of examples in DRomics.Rd to help a multi-omics approach
 
 
