--- a/inst/NEWS
+++ b/inst/NEWS
@@ -12,6 +12,8 @@ in a pdf file, using the raw scale or the log scale of the dose
 - Replacement of the class 'metabolomicdata' by the class 'continuousomicdata'
 and add of a function continuousomicdata() that is called by metabolomicdata()
 but could be used on other types of continuous omics data such as proteomics data.
+- default color changed for bmdplotwithgradient() (green replaced by blue for 
+color blind people)
 
 Version 2.1-0 
 =============
