--- a/inst/NEWS
+++ b/inst/NEWS
@@ -15,6 +15,8 @@ but could be used on other types of continuous omics data such as proteomics dat
 - default color changed for bmdplotwithgradient() (green replaced by blue for 
 color blind people)
 - Add of a vignette
+- Removing of three of the four datasets from Zou et al. 2017 to make the 
+package lighter
 
 Version 2.1-0 
 =============
