Update of the NEWS

--- a/inst/NEWS
+++ b/inst/NEWS
@@ -18,6 +18,8 @@ color blind people)
 - Removing of three of the four datasets from Zou et al. 2017 to make the 
 package lighter
 - Add an option 'AICc' for the argument information.criterion in drcfit().
+- Add a test on residuals for heteroscedasticity and an output of drcfit: 
+residualtests
 
 Version 2.1-0 
 =============
