--- a/vignettes/DRomics_vignette.Rmd
+++ b/vignettes/DRomics_vignette.Rmd
@@ -181,7 +181,13 @@ For such data the plot() function provides a dose-response plot for each endpoin
 
 For the second step of the workflow, function itemselect() must be used with the output of the function used in Step 1 as first argument (output of RNAseqdata(), microarraydata(), continuousomicdata() or continuousanchoringdata()). Below is an example with microarray data.
 
-The false discovery rate (FDR) must be chosen (we recommend a value between 0.001 and 0.1 depending of the initial number of items). 
+The false discovery rate corresponds to the expected proportion of items that will be falsely
+detected as responsive. With a very large data set it is important to define a selectio step based
+on an FDR ot only to reduce the number of items to be firther processed, but also to remove
+too noisy dose-response curves that may impair the quality of the results.
+We recommend a value between 0.001 and 0.1 depending of the initial number of items. 
+When this number is very high (more than several tens of thousands),
+we recommend a FDR less than 0.05 (0.001 to 0.01) to increase the robustness of the results.
 
 Concerning the method used for selection, we recommend the default choice ("quadratic") for a typical omics dose-response design (many doses/concentrations with few replicates
 per condition). It enables the selection of both monotonic and 
@@ -259,9 +265,11 @@ plot(f, plot.type = "dose_residuals")
 
 ### Calculation of BMD
 
-Both types of benchmark doses (BMD-zSD and BMD-xfold) are systematically calculated
+The two types of benchmark doses (BMD-zSD and BMD-xfold) proposed by 
+the EFSA (2017) are systematically calculated
 for each fitted dose-response curve using the function bmdcalc() with the output
-of the drcfit() function as a first argument. 
+of the drcfit() function as a first argument (see Larras et al. 2018 
+or ?drcfit for details).
 
 The argument z, by default at 1, is used to define the BMD-zSD as the dose at which the response is reaching y0 +/- z * SD, with y0 the level at the control given by the dose-response fitted model and SD the residual standard deviation of the dose-response fitted model. 
 
@@ -589,9 +597,13 @@ curvesplot(LMres, facetby = "level", free.y.scales = TRUE, npoints = 100, line.s
            xmin = 0, xmax = 8) + labs(col = "DR_trend")
 ```
 
-# Main references 
+# References 
 
 + Burnham, KP, Anderson DR (2004). Multimodel inference: understanding AIC and BIC in model selection. Sociological methods & research, 33(2), 261-304.
+
++ EFSA Scientific Committee, Hardy A, Benford D, Halldorsson T, Jeger MJ, Knutsen KH, ...
+& Schlatter JR  (2017). Update: use of the benchmark dose approach in risk assessment.
+EFSA Journal, 15(1), e04658.
 
 + Hurvich, CM, Tsai, CL (1989). Regression and time series model selection in small samples. Biometrika, 76(2), 297-307.
 
