--- a/vignettes/DRomics_vignette.Rmd
+++ b/vignettes/DRomics_vignette.Rmd
@@ -4,6 +4,7 @@ author: Marie Laure Delignette Muller, Elise Billoir, Floriane Larras
 date: '`r Sys.Date()`'
 output:
   html_vignette:
+  # pdf_document:
     toc: yes
     number_sections: yes
 
