--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,5 +1,12 @@
 === DRomics : Dose response for omics ===
 
+Version 2.2-1 
+=============
+NEW FEATURES
+- An argument facetby2 was added to bmdplotwithgradient()
+and to curvesplot() to be able
+to split those plots in rows AND columns using facet_grid()
+
 Version 2.2-0 
 =============
 NEW FEATURES
